# SsagePass

./: .gitignore  README.md  demo.sh
Demo/: Test.cpp  main  main.cpp  main_fla  main_fla.ll  main_lowerswitch.ll  main_split  main_split.ll  symbols_obf.yaml  test_symbolobf_map.yaml
Obfuscation/: CMakeLists.txt
Obfuscation/include/: BogusControlFlow.h  Flattening.h  FlatteningEnhanced.h  FunctionWrapper.h  IndirectBranch.h  IndirectCall.h  LegacyLowerSwitch.h  MBAObfuscation.h  MBAUtils.h  ObfuscationOptions.h  SplitBasicBlock.h  StringEncryption.h  Utils.h  VMFlatten.h
Obfuscation/include/compat/: CallSite.h
Obfuscation/src/: BogusControlFlow.cpp  Flattening.cpp  FlatteningEnhanced.cpp  FunctionWrapper.cpp  IPObfuscationContext.cpp  IndirectBranch.cpp  IndirectCall.cpp  LegacyLowerSwitch.cpp  MBAObfuscation.cpp  MBAUtils.cpp  ObfuscationOptions.cpp  PMRegistration.cpp  SplitBasicBlock.cpp  StringEncryption.cpp  Utils.cpp  VMFlatten.cpp
Transforms/: CMakeLists.txt
Transforms/include/: CryptoUtils.h  SplitBasicBlock.h  Utils.h
Transforms/src/: CryptoUtils.cpp  HelloWorld.cpp  SplitBasicBlock.cpp  Utils.cpp
docs/: LLVM_API.md  LLVM_IR.md  LLVM_Obfuscation.md  README.md
